// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pet looks up a pet 1`] = `
Object {
  "petOnNeopetsDotCom": Object {
    "color": Object {
      "id": "75",
      "name": "Starry",
    },
    "items": Array [
      Object {
        "description": "What does this ball actually do?",
        "id": "37229",
        "isNc": false,
        "name": "Magic Ball Table",
        "rarityIndex": 101,
        "thumbnailUrl": "http://images.neopets.com/items/gif_magicball_table.gif",
      },
      Object {
        "description": "Dont forget to wish upon a star.",
        "id": "37375",
        "isNc": false,
        "name": "Moon and Stars Background",
        "rarityIndex": 75,
        "thumbnailUrl": "http://images.neopets.com/items/bg_moonstars.gif",
      },
      Object {
        "description": "Hide your face and hair so no one can recognise you.",
        "id": "38911",
        "isNc": false,
        "name": "Zafara Agent Hood",
        "rarityIndex": 92,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_hood.gif",
      },
      Object {
        "description": "This robe is great for being stealthy.",
        "id": "38912",
        "isNc": false,
        "name": "Zafara Agent Robe",
        "rarityIndex": 90,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_robe.gif",
      },
      Object {
        "description": "Dont leave any trace that you were there with these gloves.",
        "id": "38913",
        "isNc": false,
        "name": "Zafara Agent Gloves",
        "rarityIndex": 88,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_gloves.gif",
      },
      Object {
        "description": "These leaves almost look magical with their gentle glow.",
        "id": "43014",
        "isNc": false,
        "name": "Green Leaf String Lights",
        "rarityIndex": 80,
        "thumbnailUrl": "http://images.neopets.com/items/toy_stringlight_illleaf.gif",
      },
      Object {
        "description": "This jewelled staff shines with a magical light.",
        "id": "43397",
        "isNc": true,
        "name": "Jewelled Staff",
        "rarityIndex": 500,
        "thumbnailUrl": "http://images.neopets.com/items/mall_staff_jewelled.gif",
      },
      Object {
        "description": "Even the announcers of the Altador Cup celebrate.  This was given out by the Advent Calendar in Y11.",
        "id": "48313",
        "isNc": false,
        "name": "Altador Cup Brooch",
        "rarityIndex": 101,
        "thumbnailUrl": "http://images.neopets.com/items/clo_altcuplogo_brooch.gif",
      },
    ],
    "pose": "SAD_MASC",
    "species": Object {
      "id": "54",
      "name": "Zafara",
    },
  },
}
`;

exports[`Pet models new item data 1`] = `
Object {
  "petOnNeopetsDotCom": Object {
    "items": Array [
      Object {
        "description": "What does this ball actually do?",
        "id": "37229",
        "isNc": false,
        "name": "Magic Ball Table",
        "rarityIndex": 101,
        "thumbnailUrl": "http://images.neopets.com/items/gif_magicball_table.gif",
      },
      Object {
        "description": "Dont forget to wish upon a star.",
        "id": "37375",
        "isNc": false,
        "name": "Moon and Stars Background",
        "rarityIndex": 75,
        "thumbnailUrl": "http://images.neopets.com/items/bg_moonstars.gif",
      },
      Object {
        "description": "Hide your face and hair so no one can recognise you.",
        "id": "38911",
        "isNc": false,
        "name": "Zafara Agent Hood",
        "rarityIndex": 92,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_hood.gif",
      },
      Object {
        "description": "This robe is great for being stealthy.",
        "id": "38912",
        "isNc": false,
        "name": "Zafara Agent Robe",
        "rarityIndex": 90,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_robe.gif",
      },
      Object {
        "description": "Dont leave any trace that you were there with these gloves.",
        "id": "38913",
        "isNc": false,
        "name": "Zafara Agent Gloves",
        "rarityIndex": 88,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_gloves.gif",
      },
      Object {
        "description": "These leaves almost look magical with their gentle glow.",
        "id": "43014",
        "isNc": false,
        "name": "Green Leaf String Lights",
        "rarityIndex": 80,
        "thumbnailUrl": "http://images.neopets.com/items/toy_stringlight_illleaf.gif",
      },
      Object {
        "description": "This jewelled staff shines with a magical light.",
        "id": "43397",
        "isNc": true,
        "name": "Jewelled Staff",
        "rarityIndex": 500,
        "thumbnailUrl": "http://images.neopets.com/items/mall_staff_jewelled.gif",
      },
      Object {
        "description": "Even the announcers of the Altador Cup celebrate.  This was given out by the Advent Calendar in Y11.",
        "id": "48313",
        "isNc": false,
        "name": "Altador Cup Brooch",
        "rarityIndex": 101,
        "thumbnailUrl": "http://images.neopets.com/items/clo_altcuplogo_brooch.gif",
      },
    ],
  },
}
`;

exports[`Pet models new item data 2`] = `
Array [
  Array [
    "SELECT * FROM items WHERE id IN (?,?,?,?,?,?,?,?)",
    Array [
      "37229",
      "37375",
      "38911",
      "38912",
      "38913",
      "43014",
      "43397",
      "48313",
    ],
  ],
  Array [
    "SELECT * FROM item_translations WHERE item_id IN (?,?,?,?,?,?,?,?) AND locale = \\"en\\"",
    Array [
      "37229",
      "37375",
      "38911",
      "38912",
      "38913",
      "43014",
      "43397",
      "48313",
    ],
  ],
  Array [
    "INSERT INTO items
           (
             id, zones_restrict, thumbnail_url, category, type, rarity_index,
             price, weight_lbs, created_at, updated_at
           )
           VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
      ",
    Array [
      "37229",
      "0000000000000000000000000000000000000000000000",
      "http://images.neopets.com/items/gif_magicball_table.gif",
      "Gift",
      "Gift",
      101,
      0,
      1,
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "37375",
      "0000000000000000000000000000000000000000000000000000",
      "http://images.neopets.com/items/bg_moonstars.gif",
      "Special",
      "Mystical Surroundings",
      75,
      209,
      1,
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "38911",
      "0000000000000000000000000000000000001100000000000000",
      "http://images.neopets.com/items/clo_zafara_agent_hood.gif",
      "Clothes",
      "Clothes",
      92,
      980,
      1,
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "38912",
      "0000000000000000000101000000000000000000000000000000",
      "http://images.neopets.com/items/clo_zafara_agent_robe.gif",
      "Clothes",
      "Clothes",
      90,
      1476,
      1,
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "38913",
      "0000000000000000000000000000000000000000000000000000",
      "http://images.neopets.com/items/clo_zafara_agent_gloves.gif",
      "Clothes",
      "Clothes",
      88,
      1177,
      1,
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "43014",
      "0000000000000000000000000000000000000000000000",
      "http://images.neopets.com/items/toy_stringlight_illleaf.gif",
      "Toys",
      "Toy",
      80,
      1033,
      1,
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "43397",
      "0000000000000000000000000000000000000000000000",
      "http://images.neopets.com/items/mall_staff_jewelled.gif",
      "Clothes",
      "Clothes",
      500,
      0,
      1,
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "48313",
      "0000000000000000000000000000000000000000000000000000",
      "http://images.neopets.com/items/clo_altcuplogo_brooch.gif",
      "Clothes",
      "Clothes",
      101,
      0,
      1,
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
    ],
  ],
  Array [
    "INSERT INTO item_translations
          (item_id, locale, name, description, rarity, created_at, updated_at)
          VALUES (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?);",
    Array [
      "37229",
      "en",
      "Magic Ball Table",
      "What does this ball actually do?",
      "Special",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "37375",
      "en",
      "Moon and Stars Background",
      "Dont forget to wish upon a star.",
      "Uncommon",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "38911",
      "en",
      "Zafara Agent Hood",
      "Hide your face and hair so no one can recognise you.",
      "Very Rare",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "38912",
      "en",
      "Zafara Agent Robe",
      "This robe is great for being stealthy.",
      "Very Rare",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "38913",
      "en",
      "Zafara Agent Gloves",
      "Dont leave any trace that you were there with these gloves.",
      "Rare",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "43014",
      "en",
      "Green Leaf String Lights",
      "These leaves almost look magical with their gentle glow.",
      "Uncommon",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "43397",
      "en",
      "Jewelled Staff",
      "This jewelled staff shines with a magical light.",
      "Artifact",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "48313",
      "en",
      "Altador Cup Brooch",
      "Even the announcers of the Altador Cup celebrate.  This was given out by the Advent Calendar in Y11.",
      "Special",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
    ],
  ],
]
`;

exports[`Pet models new item data 3`] = `
Object {
  "items": Array [
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "What does this ball actually do?",
      "id": "37229",
      "isNc": false,
      "name": "Magic Ball Table",
      "rarityIndex": 101,
      "thumbnailUrl": "http://images.neopets.com/items/gif_magicball_table.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "Dont forget to wish upon a star.",
      "id": "37375",
      "isNc": false,
      "name": "Moon and Stars Background",
      "rarityIndex": 75,
      "thumbnailUrl": "http://images.neopets.com/items/bg_moonstars.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "Hide your face and hair so no one can recognise you.",
      "id": "38911",
      "isNc": false,
      "name": "Zafara Agent Hood",
      "rarityIndex": 92,
      "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_hood.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "This robe is great for being stealthy.",
      "id": "38912",
      "isNc": false,
      "name": "Zafara Agent Robe",
      "rarityIndex": 90,
      "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_robe.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "Dont leave any trace that you were there with these gloves.",
      "id": "38913",
      "isNc": false,
      "name": "Zafara Agent Gloves",
      "rarityIndex": 88,
      "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_gloves.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "These leaves almost look magical with their gentle glow.",
      "id": "43014",
      "isNc": false,
      "name": "Green Leaf String Lights",
      "rarityIndex": 80,
      "thumbnailUrl": "http://images.neopets.com/items/toy_stringlight_illleaf.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "This jewelled staff shines with a magical light.",
      "id": "43397",
      "isNc": true,
      "name": "Jewelled Staff",
      "rarityIndex": 500,
      "thumbnailUrl": "http://images.neopets.com/items/mall_staff_jewelled.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "Even the announcers of the Altador Cup celebrate.  This was given out by the Advent Calendar in Y11.",
      "id": "48313",
      "isNc": false,
      "name": "Altador Cup Brooch",
      "rarityIndex": 101,
      "thumbnailUrl": "http://images.neopets.com/items/clo_altcuplogo_brooch.gif",
    },
  ],
}
`;
